
// ./proto/orders/order.proto

    syntax = "proto3";
   
    option go_package = "github.com/sudip34/go-grpc-gateway-example/protogen/golang/product";
    
    enum ProductType {
      UNKNOWN = 0;
      FOOD = 1;
      DRINK = 2;
    }
    message Product {
      uint64 order_id = 1 [json_name = "order_id"];
      string product_name = 2 [json_name = "product_name"];
      ProductType product_type = 5 [json_name = "product_type"];
    }
